--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
    <head><title> MENU </title>
-   <link rel="stylesheet" href="menu.css" >
+   <link rel="stylesheet" href="index.css" >
    </head>
 
 
