--- a/shave.html
+++ b/shave.html
@@ -11,7 +11,7 @@
         <H1 style="font-size: 80px; font-weight: bold; color: white;">
             BREAD STYLING
         </H1>
-        <a style="color: aliceblue; text-decoration: none;" href="menu.html">MENU</a>
+        <a style="color: aliceblue; text-decoration: none;" href="index.html">MENU</a>
     </header>
     
     <section>
