--- a/sdppoj.html
+++ b/sdppoj.html
@@ -13,7 +13,7 @@
             HAIR STYLE 
         </h1>
        
-            <a style="text-decoration: none; color: aliceblue;" href="menu.html">MENU</a>
+            <a style="text-decoration: none; color: aliceblue;" href="index.html">MENU</a>
         
     </header>
     <div class="container">
